--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,5 +1,11 @@
 header {color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px #CCCCCC;
+        height: 70px;
+        width: 100%;
+        border: 1px solid#CCCCCC;
   }
+
+  .icon {background-image: url("images/icon.png");
+        height: 60px;
+        width: 142px;
+  }
+      
